--- a/chandana/index.html
+++ b/chandana/index.html
@@ -47,7 +47,11 @@
 
 
       <div class="main">
-        <h1>Popular Products</h1>
+        <h2>
+          Popular
+          <span>Products</span>
+        </h2>
+        
         
       </div>
 
