--- a/chandana/index.html
+++ b/chandana/index.html
@@ -21,7 +21,7 @@
       <li><a href="#">Blog</a></li>
       <li><a href="#">checkout</a></li>
       <li><a href="#">Order</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="about-us.html">About</a></li>
     </ul>
   </div>
 
