--- a/chandana/about-us.html
+++ b/chandana/about-us.html
@@ -27,14 +27,32 @@
 
 
 <div class="hero">
-    <div><img src="templates/images/blog-2.jpg"></div>
-    <p>E-mart is an ecommerce website based in Rudrapur, a city located in the district of Udham Singh Nagar, Uttarakhand. The website primarily sells electronic items such as mobile phones, TVs, refrigerators, and more. As a co-founder of E-mart, you have the opportunity to provide customers with high-quality electronic products from the comfort of their own homes.
+   <div class="side-img">
+    <img src="templates/images/blog-2.jpg" alt="image-1">
+   </div>
+   <div class="desc">
+    <p>About Us</p>
 
-        One of the main advantages of E-mart is that customers can browse through a wide variety of electronic items, without having to physically visit a store. This is particularly useful for people who live in remote areas, or who have busy schedules and cannot afford to spend time shopping in-person. With E-mart, customers can easily find what they are looking for, place an order, and have it delivered to their doorstep.
-                              
-        Overall, E-mart is an excellent choice for anyone looking to purchase electronic items online. With a wide range of products, competitive prices, and excellent customer service, E-mart is a reliable and trustworthy ecommerce website. As a co-founder, you can be proud to be part of a company that is dedicated to providing customers with high-quality electronic products and exceptional service.
-        </p>
+     <h2> A Few words about us</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur elit. Earum mollitia cum ex ipsam autem!earum sequi amet. Quisque ac molestie mauris. Phasellus at neque consectetur, gravida erat at, ullamcorper lectus eget sagittis nisi.
+      We have 30+ years of experience. We provide the best services for your growing company  </p>
+      <ul style="list-style-type: none; color:rgb(68, 68, 68);">
+        <li>Designs visually appealing online stores for businesses.</li>
+        <li>Knowledgeable in UX design and e-commerce platforms.</li>
+        <li>Skilled in web development languages and SEO.</li>
+        <li>Stays up-to-date with design trends and collaborates with web development teams.</li>
+      </ul>
+   </div>
 </div>
+
+
+<form>
+  
+</form>
+
+
+
+
 <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13956.759451543801!2d79.63797532684438!3d29.011368481646247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a060cc90491d85%3A0x6a73dc3d79301493!2sShaktifarm%2C%20Uttarakhand!5e0!3m2!1sen!2sin!4v1680434471044!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
