--- a/chandana/about-us.html
+++ b/chandana/about-us.html
@@ -45,10 +45,25 @@
    </div>
 </div>
 
-
-<form>
+<form action="#" method="Post">
+<h2>Get into touch</h2>
+   <label for="fname">First name:</label>
+   <input type="text" id="fname"><br>
   
-</form>
+
+   <label for="lname">Last name:</label>
+   <input type="text" id="lname"><br>
+
+   <label for="email">Email:</label>
+   <input type="email" id="email"><br>
+
+   <label for="desc">Message</label>
+  <textarea rows="6" cols="40" id="desc">hello world</textarea>
+
+  <input type="submit" value="SEND">
+  
+ </form>
+
 
 
 
