--- a/mohit/index.html
+++ b/mohit/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mohit Sarkar</title>
+  <link rel="stylesheet" href="template/css/style.css">
 </head>
 <body>
-    
+
+  <nav>
+    <div class="logo"> <h1>Mohit sarkar</h1></div>
+    <div class="nav-items">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Skill</a></li>
+        <li><a href="#">Project</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+  </nav>
+  
 </body>
 </html>
