--- a/mohit/index.html
+++ b/mohit/index.html
@@ -21,6 +21,19 @@
       </ul>
     </div>
   </nav>
+
+  <div class="hero-section">
+
+    <div class="hero-description">
+      <h2>"Innovative Design for the Modern World" - Demonstrate your dedication to staying up-to-date with the latest design trends and technology.</h2>
+      <p> I'm Mohit, a passionate graphic designer with a love for creating beautiful, functional designs. With a background in web development, I bring a unique perspective to my work, blending creativity with technical knowledge to deliver innovative solutions that stand out. I'm driven by a desire to craft visual stories that inspire and engage, and I'm always looking for new challenges and opportunities to grow my skills.</p>
+    </div>
+
+    <div class="hero-picture">
+      <img src="template/images/mohit.jpg" alt="mohit"> 
+    </div>
+
+  </div>
   
 </body>
 </html>
