--- a/mohit/index.html
+++ b/mohit/index.html
@@ -5,35 +5,57 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mohit Sarkar</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="template/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
-
-  <nav>
-    <div class="logo"> <h1>Mohit sarkar</h1></div>
-    <div class="nav-items">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Skill</a></li>
-        <li><a href="#">Project</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="hero-section">
-
-    <div class="hero-description">
-      <h2>"Innovative Design for the Modern World" - Demonstrate your dedication to staying up-to-date with the latest design trends and technology.</h2>
-      <p> I'm Mohit, a passionate graphic designer with a love for creating beautiful, functional designs. With a background in web development, I bring a unique perspective to my work, blending creativity with technical knowledge to deliver innovative solutions that stand out. I'm driven by a desire to craft visual stories that inspire and engage, and I'm always looking for new challenges and opportunities to grow my skills.</p>
-    </div>
-
-    <div class="hero-picture">
-      <img src="template/images/mohit.jpg" alt="mohit"> 
-    </div>
-
-  </div>
   
+  <section class="headder">
+
+
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="nav-0 me-auto" href="#">Mohit Sarkar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Skills</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Work</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Resume</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          </ul>
+          
+        </div>
+      </div>
+    </nav>
+  </section>
+
+  <div class="container">
+    <div class="text">
+      <h1>Innovative Design for the Modern World <br>Demonstrate your dedication to staying up-to-date with the latest design trends and technology.</h1>
+      <p>I'm Mohit, a passionate graphic designer with a love for creating beautiful, functional designs. With a background in web development, I bring a unique perspective to my work, blending creativity with technical knowledge to deliver innovative solutions that stand out. I'm driven by a desire to craft visual stories that inspire and engage, and I'm always looking for new challenges and opportunities to grow my skills.
+      </p>
+
+      <i class="fa-brands fa-linkedin"></i>
+      <i class="fa-brands fa-square-github"></i>
+      <i class="fa-brands fa-square-twitter"></i>
+      <i class="fa-brands fa-square-instagram"></i>
+
+    </div>
+
+    <div class="container-img">
+      <img src="template/images/mohit.jpg">
+    </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
