progress bar added

--- a/mohit/index.html
+++ b/mohit/index.html
@@ -60,6 +60,7 @@
   <div class="porgress-box">
 
     <div class="skill">
+      <h3 style="text-align: center; color:orange;">My Skills</h3>
 
       <h2>Html</h2>
       <div class="progress-bar">
@@ -92,10 +93,35 @@
     </div>
 
     <div class="work-and-projrcts">
+      <h3 style="text-align: center; color:orange;">My Projects</h3>
+
+      <div class="work-box">
+
+          <div class="html-bar"><span>100+</span> <a href="#">see project</a> <p>last update <br>12-April- 2023</p> </div>
+
+          <div class="css-bar"><span>100+</span><a href="#">see project</a> <p>last update <br>12-April- 2023</p> </div>
+
+          <div class="js-bar"><span>10+</span><a href="#">see project</a> <p>last update <br>12-April- 2023</p> </div>
+
+          <div class="python-bar"><span>100+</span><a href="#">see project</a> <p>last update <br>12-April- 2023</p> </div>
+          
+          <div class="django-bar"><span>10+</span><a href="#">see project</a> <p>last update <br>12-April- 2023</p> </div>
+
+
+      </div>
+
+    <div class="color-code">
+          <div class="html-bar-color-code"><span></span><b style="color:white">Html</b></div>
+          <div class="css-bar-color-code"><span></span><b style="color:white">Css</b></div>
+          <div class="js-bar-color-code"><span></span><b style="color:white">Js</b></div>
+          <div class="python-bar-color-code"><span></span><b style="color:white">Python</b></div>
+          <div class="django-bar-color-code"><span></span><b style="color:white">Django</b></div>
+    </div>
 
     </div>
 
   </div>
+  <!-- progress bar end -->
 
 
 
