portfolio page uploaded

--- a/mohit/index.html
+++ b/mohit/index.html
@@ -65,8 +65,7 @@
   </div>
 
 
-  <h1 class="skill-and-project-heading"><b style="color:orangered">Skills</b> and <b
-      style="color:orangered">Projects</b></h1>
+  <h1 class="skill-and-project-heading">Skills and Projects</h1>
   <div class="porgress-box">
 
     <div class="skill">
@@ -131,11 +130,11 @@
       </div>
 
       <div class="color-code">
-        <div class="html-bar-color-code"><span></span><b style="color:white">Html</b></div>
-        <div class="css-bar-color-code"><span></span><b style="color:white">Css</b></div>
-        <div class="js-bar-color-code"><span></span><b style="color:white">Js</b></div>
-        <div class="python-bar-color-code"><span></span><b style="color:white">Python</b></div>
-        <div class="django-bar-color-code"><span></span><b style="color:white">Django</b></div>
+        <div class="html-bar-color-code"><span></span><b style="color:white; font-size:16px;">Html</b></div>
+        <div class="css-bar-color-code"><span></span><b style="color:white; font-size:16px;">Css</b></div>
+        <div class="js-bar-color-code"><span></span><b style="color:white; font-size:16px;">Js</b></div>
+        <div class="python-bar-color-code"><span></span><b style="color:white; font-size:16px;">Python</b></div>
+        <div class="django-bar-color-code"><span></span><b style="color:white; font-size:16px;">Django</b></div>
       </div>
 
     </div>
@@ -187,7 +186,7 @@
 
         <div class="text-field">
           <h3>design professional flyers for your business I will design professional flyers for your business</h3>
-          <a href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
         </div>
@@ -228,7 +227,7 @@
 
         <div class="text-field">
           <h3>I will design restaurant food menu, static tv screen menu board, flyer, banner</h3>
-          <a href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
         </div>
@@ -243,13 +242,13 @@
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="template/images/thumbnails/1.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/thumbnails/1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/thumbnails/2.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/thumbnails/2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/thumbnails/1.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/thumbnails/3.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -269,7 +268,7 @@
 
         <div class="text-field">
           <h3>I will design an eye catching youtube thumbnail for your channel</h3>
-          <a href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
         </div>
@@ -283,13 +282,13 @@
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="template/images/mohit.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/ui-design/1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/1.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/ui-design/2.webp" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/2.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/ui-design/3.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -308,8 +307,8 @@
         </div>
 
         <div class="text-field">
-          <h3>Blog title descreption</h3>
-          <a href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <h3>I will design a creative UX UI for your website or mobile app</h3>
+          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
         </div>
@@ -323,13 +322,13 @@
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="template/images/mohit.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/webdesign/1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/1.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/webdesign/2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/2.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/webdesign/3.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -348,8 +347,8 @@
         </div>
 
         <div class="text-field">
-          <h3>Blog title descreption</h3>
-          <a href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <h3>I will do web design and build professional website or landing page</h3>
+          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
         </div>
       </div>
@@ -362,13 +361,13 @@
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="template/images/mohit.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/seo/1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/1.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/seo/2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="template/images/2.jpg" class="d-block w-100" alt="...">
+                <img src="template/images/seo/3.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -387,8 +386,8 @@
         </div>
 
         <div class="text-field">
-          <h3>Blog title descreption</h3>
-          <a href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <h3>I will optimize the SEO of your website for optimal rankings</h3>
+          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
         </div>
