--- a/mohit/index.html
+++ b/mohit/index.html
@@ -130,11 +130,11 @@
       </div>
 
       <div class="color-code">
-        <div class="html-bar-color-code"><span></span><b style="color:white; font-size:16px;">Html</b></div>
-        <div class="css-bar-color-code"><span></span><b style="color:white; font-size:16px;">Css</b></div>
-        <div class="js-bar-color-code"><span></span><b style="color:white; font-size:16px;">Js</b></div>
-        <div class="python-bar-color-code"><span></span><b style="color:white; font-size:16px;">Python</b></div>
-        <div class="django-bar-color-code"><span></span><b style="color:white; font-size:16px;">Django</b></div>
+        <div class="html-bar-color-code"><span></span><b style="color:white; font-size:1.6rem;">Html</b></div>
+        <div class="css-bar-color-code"><span></span><b style="color:white; font-size:1.6rem;">Css</b></div>
+        <div class="js-bar-color-code"><span></span><b style="color:white; font-size:1.6rem;">Js</b></div>
+        <div class="python-bar-color-code"><span></span><b style="color:white; font-size:1.6rem;">Python</b></div>
+        <div class="django-bar-color-code"><span></span><b style="color:white; font-size:1.6rem;">Django</b></div>
       </div>
 
     </div>
@@ -397,8 +397,83 @@
 
   </div>
 
+  <!----------------------------------- -->
+  <!-- Blogs -->
+  
+
+  <h1 style="text-align: center; margin: 48px auto 30px auto; font-family: roboto; font-size: 3.6rem;">My Blogs</h1>
+
+  <div class="blog">
+
+   
+    <div class="blog-wrapper-card">
+
+      <div class="blog-card">
+        <div><img src="template/images/flyer/4.jpg" alt="blog image"></div>
+        <div>
+          <h3>AI Robot technology in today's arena</h3>
+          <p>Graphic design is the art of creating visual content to communicate
+            information or ideas to a specific audience. It involves combining typography, images, and other design
+            elements to convey a message effectively.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+
+      <div class="blog-card">
+        <div><img src="template/images/menu/4.jpg" alt="blog image"></div>
+        <div>
+          <h3>AI Robot technology in today's arena</h3>
+          <p>Graphic design is the art of creating visual content to communicate
+            information or ideas to a specific audience. It involves combining typography, images, and other design
+            elements to convey a message effectively.</p>
+          <a href="#">Read More</a>
+        </div>
+      </div>
+
+    </div>
+
+</div>
+
+<footer>
+  <div class="category">
+    <h3>follow us</h3>
+    <ul>
+      
+      <a href="https://www.linkedin.com/in/mohit-sarkar/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/mohits029" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+      <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+      <a href="https://www.instagram.com/mohitsarkar14/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+  
+    </ul>
+    <a href="mailto: mohitsarkar256@gmai;.com"><i class="fa-solid fa-envelope-open-text" style="font-size:2rem;"></i> mohitsarkar256@gmail.com</a>
+  </div>
+  
+  
+  <div class="follow-us">
+    <h3>Services</h3>
+    <ul>
+      <li><a href="#">Flyer designing</a></li>
+      <li><a href="#">Video editing</a></li>
+      <li><a href="#">UI/UX App designing</a></li>
+      <li><a href="#">Website designing</a></li>
+    </ul>
+  </div>
 
 
+  <div class="quick-links">
+    <h3>Quick Links</h3>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Resume</a></li>
+      <li><a href="#">contact us</a></li>
+    </ul>
+  </div>
+
+
+</footer>
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
