New file added successfully

--- a/mohit/index.html
+++ b/mohit/index.html
@@ -28,10 +28,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Skills</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Work</a></li>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#skill-and-project-heading">Skills</a></li>
+            <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Resume</a></li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           </ul>
@@ -60,12 +60,12 @@
     </div>
 
     <div class="container-img">
-      <img src="template/images/mohit.jpg">
+      <img src="template/images/mohit.png">
     </div>
   </div>
 
 
-  <h1 class="skill-and-project-heading">Skills and Projects</h1>
+  <h1 class="skill-and-project-heading" id="skill-and-project-heading">Skills and Projects</h1>
   <div class="porgress-box">
 
     <div class="skill">
@@ -106,23 +106,23 @@
 
       <div class="work-box">
 
-        <div class="html-bar"><span>100+</span> <a href="#">show project</a>
+        <div class="html-bar"><span>50+</span> <a href="https://github.com/mohits029/web-development">show project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
-        <div class="css-bar"><span>100+</span><a href="#">show project</a>
+        <div class="css-bar"><span>50+</span><a href="https://github.com/mohits029/web-development">show project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
-        <div class="js-bar"><span>10+</span><a href="#">show project</a>
+        <div class="js-bar"><span>10+</span><a href="https://github.com/mohits029/javascript-Assignment">show project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
-        <div class="python-bar"><span>100+</span><a href="#">show project</a>
+        <div class="python-bar"><span>100+</span><a href="https://github.com/mohits029/Python-Assignment">show project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
-        <div class="django-bar"><span>10+</span><a href="#">show project</a>
+        <div class="django-bar"><span>10+</span><a href="https://github.com/mohits029/django">show project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
@@ -143,7 +143,7 @@
   <!-- progress bar end -->
 
   <!-- ********************************** portfolio ***********************************************  -->
-  <div class="portfolio">
+  <div class="portfolio" id="portfolio">
     <h1>Portfolio</h1>
 
     <div class="blogs">
@@ -403,7 +403,7 @@
 
   <h1 style="text-align: center; margin: 48px auto 30px auto; font-family: roboto; font-size: 3.6rem;">My Blogs</h1>
 
-  <div class="blog">
+  <div class="blog" id="blog">
 
    
     <div class="blog-wrapper-card">
