--- a/mohit/portfolio-page.html
+++ b/mohit/portfolio-page.html
@@ -112,8 +112,8 @@
           </div>
           <div class="desc">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate natus sapiente omnis ut quisquam
-              </p>
-              <button>Contact me</button>
+            </p>
+            <button>Contact me</button>
           </div>
         </div>
 
@@ -121,19 +121,179 @@
 
       <div class="compare-package">
         <h3 class="desc-h2">Compare packages</h3>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Package</th>
+              <th scope="col">Basic</th>
+              <th scope="col">Standard</th>
+              <th scope="col">Premium</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Source file</th>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+              <td><i class="fa-solid fa-circle-check" style="color: #00b336;"></i></td>
+            </tr>
+            <tr>
+              <th scope="row">Number of pages or screens</th>
+              <td>2</td>
+              <td>5</td>
+              <td>8</td>
+            </tr>
+            <tr>
+              <th scope="row">Custom asset design</th>
+              <td>0</td>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
+              <td><i class="fa-sharp fa-solid fa-circle-xmark" style="color: #e33535;"></i></td>
+            </tr>
+
+            <tr>
+              <th scope="row">Revisions</th>
+              <td>2 day</td>
+              <td>3 day</td>
+              <td>4 day</td>
+            </tr>
+
+            <tr>
+              <th scope="row">Delivery Time</th>
+              <td>500</td>
+              <td>800</td>
+              <td>1200</td>
+            </tr>
+
+            <tr>
+              <th scope="row"></th>
+              <td><button>Select</button></td>
+              <td><button>Select</button></td>
+              <td><button>Select</button></td>
+            </tr>
+          </tbody>
+        </table>
 
       </div>
 
 
 
       <div class="recomendations">
+        <div class="heading">
 
+          <h3 class="desc-h2">Recommendations</h3>
+        </div>
+
+
+        <div class="card-wraper">
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+
+
+          <div class="card" style="width: 20rem;">
+            <img src="template/images/thumbnails/2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Some quick example text to build on the card title of the card's content.</h5>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+
+        </div> <!--card wrapper close-->
+
+      </div> <!--recomendation colse-->
+
+
+
+
+    </div> <!--left half closing-->
+
+    <div class="right-half">
+      <div class="right-box">
+        <div class="right-buttons">
+          <button>Basic</button>
+          <button>Standard</button>
+          <button>Premium</button>
+        </div>
+
+        <div class="right-box-desc">
+          <div class="price">
+            <h2>Basic</h2>
+            <h2>800</h2>
+          </div>
+
+          <ul>
+            <li>2 Days Delivery, 2 Revesion</li>
+            <li>Custom Graphic</li>
+            <li>Photo Editing</li>
+            <li>File Ready for Print</li>
+            <li>Source file</li>
+          </ul>
+          
+          <button>Continue</button>
+        </div>
       </div>
 
-
-    </div>
-
-    <div class="right-half"></div>
+    </div> <!--right half closing-->
 
   </div>
 
