--- a/mohit/portfolio-page.html
+++ b/mohit/portfolio-page.html
@@ -19,7 +19,7 @@
   <section class="headder">
 
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" id="#">
       <div class="container-fluid">
         <a class="nav-0 me-auto" href="#">Mohit Sarkar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -42,7 +42,7 @@
     </nav>
   </section>
 
-  <div class="description-bar">
+  <div class="description-bar" id="navbar">
     <ul class="overview">
       <li>overview</li>
       <li>Description</li>
@@ -62,7 +62,7 @@
     <div class="left-half">
       <h2>I will design professional flyers for your business</h2>
       <div class="seller">
-        <img src="template/images/flyer/4.jpg" width="50px">
+        <img src="template/images/flyer/4.jpg" width="40px">
         <h3>Mohit Sarkar</h3>
         <a href="#">mohitsarkar256@gmail.com</a>
       </div>
@@ -70,7 +70,34 @@
 
 
       <div class="product-img">
-        <img src="template/images/flyer/2.jpg">
+        
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="template/images/flyer/1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="template/images/flyer/2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="template/images/flyer/3.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
       </div>
 
       <div class="about-gig">
@@ -278,9 +305,12 @@
         <div class="right-box-desc">
           <div class="price">
             <h2>Basic</h2>
-            <h2>800</h2>
+            <h2><i class="fa-solid fa-indian-rupee-sign" style="font-size: 2rem;"></i> 800</h2>
+            
           </div>
-
+          <div class="package-desc">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fuga deserunt mollitia, voluptates labore iure.</p>
+          </div>
           <ul>
             <li>2 Days Delivery, 2 Revesion</li>
             <li>Custom Graphic</li>
@@ -353,6 +383,20 @@
 
 
   </footer>
+
+
+  <script>
+  window.addEventListener('scroll',function(){
+    let navbar= document.getElementById("navbar");
+
+    if(window.pageYOffset >=45.75){
+      navbar.classList.add('sticky');
+    }else{
+      navbar.classList.remove('sticky');
+    }
+  })
+   
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
