--- a/mohit/index.html
+++ b/mohit/index.html
@@ -114,11 +114,13 @@
           <p>last update <br>12-April- 2023</p>
         </div>
 
-        <div class="js-bar"><span>10+</span><a href="https://github.com/mohits029/javascript-Assignment">show project</a>
+        <div class="js-bar"><span>10+</span><a href="https://github.com/mohits029/javascript-Assignment">show
+            project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
-        <div class="python-bar"><span>100+</span><a href="https://github.com/mohits029/Python-Assignment">show project</a>
+        <div class="python-bar"><span>100+</span><a href="https://github.com/mohits029/Python-Assignment">show
+            project</a>
           <p>last update <br>12-April- 2023</p>
         </div>
 
@@ -154,7 +156,7 @@
 
       <div class="card">
 
-
+        <a href="portfolio/portfolio-page.html">
         <div class="blog-img">
 
           <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -180,13 +182,14 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-
+        </a>
 
         </div>
+      
 
         <div class="text-field">
-          <h3>design professional flyers for your business I will design professional flyers for your business</h3>
-          <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+          <h3>I will design professional flyers for your business</h3>
+          <a class="checkout-btn" href="portfolio/portfolio-page.html"><button style="font-family: sans-serif;">Checkout</button></a>
           <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
         </div>
@@ -399,13 +402,13 @@
 
   <!----------------------------------- -->
   <!-- Blogs -->
-  
+
 
   <h1 style="text-align: center; margin: 48px auto 30px auto; font-family: roboto; font-size: 3.6rem;">My Blogs</h1>
 
   <div class="blog" id="blog">
 
-   
+
     <div class="blog-wrapper-card">
 
       <div class="blog-card">
@@ -432,48 +435,50 @@
 
     </div>
 
-</div>
-
-<footer>
-  <div class="category">
-    <h3>follow us</h3>
-    <ul>
-      
-      <a href="https://www.linkedin.com/in/mohit-sarkar/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://github.com/mohits029" target="_blank"><i class="fa-brands fa-square-github"></i></a>
-      <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-      <a href="https://www.instagram.com/mohitsarkar14/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
-  
-    </ul>
-    <a href="mailto: mohitsarkar256@gmai;.com"><i class="fa-solid fa-envelope-open-text" style="font-size:2rem;"></i> mohitsarkar256@gmail.com</a>
-  </div>
-  
-  
-  <div class="follow-us">
-    <h3>Services</h3>
-    <ul>
-      <li><a href="#">Flyer designing</a></li>
-      <li><a href="#">Video editing</a></li>
-      <li><a href="#">UI/UX App designing</a></li>
-      <li><a href="#">Website designing</a></li>
-    </ul>
   </div>
 
+  <footer>
+    <div class="category">
+      <h3>follow us</h3>
+      <ul>
 
-  <div class="quick-links">
-    <h3>Quick Links</h3>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Resume</a></li>
-      <li><a href="#">contact us</a></li>
-    </ul>
-  </div>
+        <a href="https://www.linkedin.com/in/mohit-sarkar/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/mohits029" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+        <a href="https://www.instagram.com/mohitsarkar14/" target="_blank"><i
+            class="fa-brands fa-square-instagram"></i></a>
+
+      </ul>
+      <a href="mailto: mohitsarkar256@gmai;.com"><i class="fa-solid fa-envelope-open-text" style="font-size:2rem;"></i>
+        mohitsarkar256@gmail.com</a>
+    </div>
 
 
-</footer>
- 
+    <div class="follow-us">
+      <h3>Services</h3>
+      <ul>
+        <li><a href="#">Flyer designing</a></li>
+        <li><a href="#">Video editing</a></li>
+        <li><a href="#">UI/UX App designing</a></li>
+        <li><a href="#">Website designing</a></li>
+      </ul>
+    </div>
+
+
+    <div class="quick-links">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">contact us</a></li>
+      </ul>
+    </div>
+
+
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
