--- a/mohit/portfolio/menu-portfolio.html
+++ b/mohit/portfolio/menu-portfolio.html
@@ -82,13 +82,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../template/images/flyer/1.jpg" class="d-block w-100" alt="...">
+              <img src="../template/images/menu/1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../template/images/flyer/2.jpg" class="d-block w-100" alt="...">
+              <img src="../template/images/menu/2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="../template/images/flyer/3.jpg" class="d-block w-100" alt="...">
+              <img src="../template/images/menu/3.jpg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
