--- a/mohit/portfolio/portfolio-page.html
+++ b/mohit/portfolio/portfolio-page.html
@@ -64,7 +64,7 @@
       <div class="seller">
         <img src="../template/images/sellerimage/mohiticon.jpg" width="40px">
         <h3>Mohit Sarkar</h3>
-        <a href="#">mohitsarkar256@gmail.com</a>
+        <a href="mailto: mohitsarkar256@gmail.com">mohitsarkar256</a>
       </div>
 
 
