--- a/mohit/index.html
+++ b/mohit/index.html
@@ -182,7 +182,7 @@
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-            
+
         </a>
 
       </div>
@@ -202,48 +202,48 @@
 
 
       <a href="portfolio/menu-portfolio.html">
-      <div class="blog-img">
+        <div class="blog-img">
 
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="template/images/menu/1.jpg" class="d-block w-100" alt="...">
+          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="template/images/menu/1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="template/images/menu/2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="template/images/menu/3.jpg" class="d-block w-100" alt="...">
+              </div>
             </div>
-            <div class="carousel-item">
-              <img src="template/images/menu/2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="template/images/menu/3.jpg" class="d-block w-100" alt="...">
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+              data-bs-slide="prev">
+              <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+              data-bs-slide="next">
+              <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-            data-bs-slide="prev">
-            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-            data-bs-slide="next">
-            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
       </a>
 
-      </div>
-
-      <div class="text-field">
-        <h3>I will design restaurant food menu, static tv screen menu board, flyer, banner</h3>
-        <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
-        <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
-
-      </div>
     </div>
 
+    <div class="text-field">
+      <h3>I will design restaurant food menu, static tv screen menu board, flyer, banner</h3>
+      <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+      <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
-    <div class="card">
+    </div>
+  </div>
 
 
-      <a href="portfolio/thumbnail-portfolio.html">
+  <div class="card">
+
+
+    <a href="portfolio/thumbnail-portfolio.html">
       <div class="blog-img">
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -269,22 +269,22 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </a>
+    </a>
 
-      </div>
+  </div>
 
-      <div class="text-field">
-        <h3>I will design an eye catching youtube thumbnail for your channel</h3>
-        <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
-        <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
+  <div class="text-field">
+    <h3>I will design an eye catching youtube thumbnail for your channel</h3>
+    <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+    <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
-      </div>
-    </div>
+  </div>
+  </div>
 
-    <div class="card">
+  <div class="card">
 
 
-      <a href="portfolio/uiux-portfolio.html">
+    <a href="portfolio/uiux-portfolio.html">
       <div class="blog-img">
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -311,22 +311,22 @@
           </button>
         </div>
 
-      </a>
+    </a>
 
-      </div>
+  </div>
 
-      <div class="text-field">
-        <h3>I will design a creative UX UI for your website or mobile app</h3>
-        <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
-        <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
+  <div class="text-field">
+    <h3>I will design a creative UX UI for your website or mobile app</h3>
+    <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+    <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
-      </div>
-    </div>
+  </div>
+  </div>
 
-    <div class="card">
+  <div class="card">
 
 
-      <a href="portfolio/web-portfolio.html">
+    <a href="portfolio/web-portfolio.html">
       <div class="blog-img">
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -352,20 +352,20 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </a>
+    </a>
 
-      </div>
+  </div>
 
-      <div class="text-field">
-        <h3>I will do web design and build professional website or landing page</h3>
-        <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
-        <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
-      </div>
-    </div>
+  <div class="text-field">
+    <h3>I will do web design and build professional website or landing page</h3>
+    <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+    <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
+  </div>
+  </div>
 
-    <div class="card">
+  <div class="card">
 
-      <a href="portfolio/seo-portfolio.html">
+    <a href="portfolio/seo-portfolio.html">
       <div class="blog-img">
 
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -391,18 +391,18 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </a>
+    </a>
 
 
-      </div>
+  </div>
 
-      <div class="text-field">
-        <h3>I will optimize the SEO of your website for optimal rankings</h3>
-        <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
-        <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
+  <div class="text-field">
+    <h3>I will optimize the SEO of your website for optimal rankings</h3>
+    <a class="checkout-btn" href="#"><button style="font-family: sans-serif;">Checkout</button></a>
+    <a href="#"><button style="font-family: sans-serif;">Go to Fiverr</button></a>
 
-      </div>
-    </div>
+  </div>
+  </div>
 
   </div>
 
@@ -422,10 +422,9 @@
       <div class="blog-card">
         <div><img src="template/images/flyer/4.jpg" alt="blog image"></div>
         <div>
-          <h3>AI Robot technology in today's arena</h3>
-          <p>Graphic design is the art of creating visual content to communicate
-            information or ideas to a specific audience. It involves combining typography, images, and other design
-            elements to convey a message effectively.</p>
+          <h3>Understanding Cyber Security, Types of Hacking, and More</h3>
+          <p>Cyber security refers to the practices and technologies used to protect computer systems, networks, and
+            sensitive data from unauthorized access, theft, or damage. </p>
           <a href="#">Read More</a>
         </div>
       </div>
