--- a/mohit/index.html
+++ b/mohit/index.html
@@ -420,17 +420,17 @@
     <div class="blog-wrapper-card">
 
       <div class="blog-card">
-        <div><img src="template/images/flyer/4.jpg" alt="blog image"></div>
+        <div><img src="template/images/blog/hacker-cover.jpg" alt="blog image"></div>
         <div>
           <h3>Understanding Cyber Security, Types of Hacking, and More</h3>
           <p>Cyber security refers to the practices and technologies used to protect computer systems, networks, and
             sensitive data from unauthorized access, theft, or damage. </p>
-          <a href="#">Read More</a>
+          <a href="blog/blog.html">Read More</a>
         </div>
       </div>
 
       <div class="blog-card">
-        <div><img src="template/images/menu/4.jpg" alt="blog image"></div>
+        <div><img src="template/images/blog/iot-cover.jpg" alt="blog image"></div>
         <div>
           <h3>AI Robot technology in today's arena</h3>
           <p>Graphic design is the art of creating visual content to communicate
