--- a/mohit/index.html
+++ b/mohit/index.html
@@ -430,13 +430,12 @@
       </div>
 
       <div class="blog-card">
-        <div><img src="template/images/blog/iot-cover.jpg" alt="blog image"></div>
+        <div><img src="template/images/blog/AI-cover1.jpg" alt="blog image"></div>
         <div>
-          <h3>AI Robot technology in today's arena</h3>
-          <p>Graphic design is the art of creating visual content to communicate
-            information or ideas to a specific audience. It involves combining typography, images, and other design
-            elements to convey a message effectively.</p>
-          <a href="#">Read More</a>
+          <h3>The Power of AI: A Guide to Artificial Intelligence and AI Tools</h3>
+          <p>Artificial intelligence (AI) is the development of machines that can do things that normally require
+            human intelligence, like learning and problem-solving.</p>
+          <a href="blog/blog-ai.html">Read More</a>
         </div>
       </div>
 
