--- a/mohit/index.html
+++ b/mohit/index.html
@@ -32,8 +32,8 @@
             <li class="nav-item"><a class="nav-link" href="#skill-and-project-heading">Skills</a></li>
             <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Resume</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="resume/resume.html">Resume</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           </ul>
 
         </div>
